2018-01-29  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-942

	* src/m_transmitter.cc (iyRadioLink):
	* src/m_fos.cc (iyFOS): Both these WSMs are commented out. That
	is, they are for the moment not active parts of ARTS. There is
	just not time for the moment to update these methods to new
	RT scheme.

	* controlfiles/general/agendas.arts:
	* controlfiles/CMakeLists.txt: Commented out things now not
	working with FOS and RadioLink deactivated.

	* src/m_transmitter.cc (iyTransmissionStandard2): Now exists as a
	WSM. Jacobian part not yet OK.

	* controlfiles/general/agendas.arts: Removed Ignore( iy_id )
	from iy_main_agenda__Emission. Removed Ignore( t_nlte_field )
	from iy_main_agenda__Transmission.
	Not needed.

2018-01-26  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-941

	* src/m_jacobian.cc (jacobianAddFreqShift): Check of length of
	f_grid was totally crazy. Pointed out by Richard.

2018-01-26  Richard Larsson <ric.larsson@gmail.com>

	* arts-2-3-940

	* src/wigner_functions.{cc,h}:  Changed to directly include the
	header-file than to declare the functions again.  Also changed
	ECS calcs to be parallell.

	* src/propagationmatrix.{h,cc}:  Fixed bug that would occur if
	people were using this MatrixInverse on zenith and azimuth
	size-other-than-one PropagationMatrices.  Spotted by luck...
	Also added IsZero() to check if a Matrix is zero or not.
	
	* README:  Added comment about Native build.
	
	Sidenote:  I was trying to get flto option to compile the code.
	It does not work.  For some small cases it does work (e.g., matpack,
	artscore) it produces executable tests that are about 15% faster in 
	the  small test case I have got. It fails at linking the entire thing
	together though, warning that some variables are maybe left 
	uninitialized but throwing an error about even the existence
	of things like griddedfields and tensorviews.  It would be nice if 
	this can be fixed because these compiler options really helps the