@@ -1,5 +1,16 @@
 2018-01-29  Patrick Eriksson  <patrick.eriksson@chalmers.se>
 
+	* arts-2-3-943
+
+	* src/m_transmitter.cc (iyTransmissionStandard2): Post-processing
+	of Jacobian was not updated to use new function. Spotted by
+	Richard.
+
+	* src/rte.cc (rtmethods_jacobian_finalisation): Small extension of
+	header description.
+
+2018-01-29  Patrick Eriksson  <patrick.eriksson@chalmers.se>
+
 	* arts-2-3-942
 
 	* src/m_transmitter.cc (iyRadioLink):
